--- a/docs/source/image_load.mdx
+++ b/docs/source/image_load.mdx
@@ -1,6 +1,6 @@
 # Load image data
 
-Image datasets typically have a `image` column which contains a PIL object. When you load an image dataset and call the `image` column, the [`Image`] feature automatically decodes the PIL object into an image:
+Image datasets are loaded from the `image` column, which contains a PIL object. When you load an image dataset and call the `image` column, the [`Image`] feature automatically decodes the PIL object into an image:
 
 ```py
 >>> from datasets import load_dataset, Image
@@ -11,13 +11,13 @@ Image datasets typically have a `image` column which contains a PIL object. When
 
 <Tip warning={true}>
 
-Index into an image dataset using the row index first and then the `image` column - `dataset[0]["image"]` - to avoid decoding and resampling all the image objects in the dataset. Otherwise, if you have a large dataset, this can be a slow and time-consuming process.
+Index into an image dataset using the row index first and then the `image` column - `dataset[0]["image"]` - to avoid decoding and resampling all the image objects in the dataset. Otherwise, this can be a slow and time-consuming process if you have a large dataset.
 
 </Tip>
 
 ## Path
 
-The path is useful for loading your own dataset. Use the [`~Dataset.cast_column`] function to accept a column of image file paths, and decode it into a PIL image with the [`Image`] feature:
+You can load a dataset from the image path. Use the [`~Dataset.cast_column`] function to accept a column of image file paths, and decode it into a PIL image with the [`Image`] feature:
 ```py
 >>> from datasets import load_dataset, Image
 
@@ -37,7 +37,7 @@ If you only want to load the underlying path to the image dataset without decodi
 
 ## ImageFolder
 
-You can also load your image dataset with a `ImageFolder` dataset builder. The `ImageFolder` does not require writing a custom dataloader. Your image dataset structure should look like this:
+You can also load a dataset with a `ImageFolder` dataset builder. It does not require writing a custom dataloader, making it useful for quickly loading a dataset for certain vision tasks. Your image dataset structure should look like this:
 
 ```
 folder/train/dog/golden_retriever.png
@@ -69,7 +69,7 @@ Load remote datasets from their URLs with the `data_files` parameter:
 
 ## ImageFolder with metadata
 
-Metadata associated with your dataset can also be loaded. Make sure your dataset has a `metadata.jsonl` file:
+Metadata associated with your dataset can also be loaded, extending the utility of `ImageFolder` to additional vision tasks like image captioning and object detection. Make sure your dataset has a `metadata.jsonl` file:
 
 ```
 folder/train/metadata.jsonl
