--- a/docs/source/process.mdx
+++ b/docs/source/process.mdx
@@ -1,6 +1,6 @@
 # Process
 
-🤗 Datasets provides many tools for modifying the structure and content of a dataset. You can rearrange the order of rows or extract nested fields into their own columns. For more powerful processing applications, you can even alter the contents of a dataset by applying a function to the entire dataset to generate new rows and columns. These processing methods provide a lot of control and flexibility to mold your dataset into the desired shape and size with the appropriate features.
+🤗 Datasets provides many tools for modifying the structure and content of a dataset. These tools are important for tidying up a dataset, creating additional columns, converting between features and formats, and much more.
 
 This guide will show you how to:
 
@@ -11,54 +11,54 @@ This guide will show you how to:
 - Apply a custom formatting transform.
 - Save and export processed datasets.
 
-For more information specific to loading audio datasets, take a look at the <a class="bg-yellow-200 text-yellow-900 dark:bg-yellow-500 px-1 rounded font-bold" href="./audio_process">process audio data</a> guide. If you're working with image datasets, you can check out the <a class="bg-green-200 text-green-900 dark:bg-green-500 px-1 rounded font-bold" href="./image_process">process image data</a> guide.
+For more details specific to processing audio datasets, take a look at the <a class="bg-yellow-200 text-yellow-900 dark:bg-yellow-500 px-1 rounded font-bold" href="./audio_process">process audio data</a> guide. If you're working with image datasets, check out the <a class="bg-green-200 text-green-900 dark:bg-green-500 px-1 rounded font-bold" href="./image_process">process image data</a> guide. Text specific processing is covered in the <a class="bg-blue-200 text-blue-900 dark:bg-blue-500 px-1 rounded font-bold" href="./nlp_process">process text data</a> guide.
 
-Load the MRPC dataset from the GLUE benchmark to follow along with our examples:
+The examples use the MRPC dataset, but feel free to load any dataset of your choice and following along!
 
 ```py
 >>> from datasets import load_dataset
->>> dataset = load_dataset('glue', 'mrpc', split='train')
+>>> dataset = load_dataset("glue", "mrpc", split="train")
 ```
 
 <Tip warning={true}>
 
-All the processing methods in this guide return a new [`Dataset`]. Modification is not done in-place. Be careful about overriding your previous dataset!
+All processing methods in this guide return a new [`Dataset`] object. Modification is not done in-place. Be careful about overriding your previous dataset!
 
 </Tip>
 
 ## Sort, shuffle, select, split, and shard
 
-There are several methods for rearranging the structure of a dataset. These methods are useful for selecting only the rows you want, creating train and test splits, and sharding very large datasets into smaller chunks.
+There are several functions for rearranging the structure of a dataset. These functions are useful for selecting only the rows you want, creating train and test splits, and sharding very large datasets into smaller chunks.
 
 ### Sort
 
-Use [`Dataset.sort`] to sort a columns values according to their numerical values. The provided column must be NumPy compatible.
+Use [`~Dataset.sort`] to sort column values according to their numerical values. The provided column must be NumPy compatible.
 
 ```py
->>> dataset['label'][:10]
+>>> dataset["label"][:10]
 [1, 0, 1, 0, 1, 1, 0, 1, 0, 0]
->>> sorted_dataset = dataset.sort('label')
->>> sorted_dataset['label'][:10]
+>>> sorted_dataset = dataset.sort("label")
+>>> sorted_dataset["label"][:10]
 [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]
->>> sorted_dataset['label'][-10:]
+>>> sorted_dataset["label"][-10:]
 [1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
 ```
 
 ### Shuffle
 
-The [`Dataset.shuffle`] method randomly rearranges the values of a column. You can specify the `generator` argument in this method to use a different `numpy.random.Generator` if you want more control over the algorithm used to shuffle the dataset.
+The [`~Dataset.shuffle`] function randomly rearranges the column values. You can specify the `generator` parameter in this function to use a different `numpy.random.Generator` if you want more control over the algorithm used to shuffle the dataset.
 
 ```py
 >>> shuffled_dataset = sorted_dataset.shuffle(seed=42)
->>> shuffled_dataset['label'][:10]
+>>> shuffled_dataset["label"][:10]
 [1, 1, 1, 0, 1, 1, 1, 1, 1, 0]
 ```
 
 ### Select and Filter
 
-There are two options for filtering rows in a dataset: [`Dataset.select`] and [`Dataset.filter`].
+There are two options for filtering rows in a dataset: [`~Dataset.select`] and [`~Dataset.filter`].
 
-- [`Dataset.select`] returns rows according to a list of indices:
+- [`~Dataset.select`] returns rows according to a list of indices:
 
 ```py
 >>> small_dataset = dataset.select([0, 10, 20, 30, 40, 50])
@@ -66,13 +66,13 @@ There are two options for filtering rows in a dataset: [`Dataset.select`] and [`
 6
 ```
 
-- [`Dataset.filter`] returns rows that match a specified condition:
+- [`~Dataset.filter`] returns rows that match a specified condition:
 
 ```py
->>> start_with_ar = dataset.filter(lambda example: example['sentence1'].startswith('Ar'))
+>>> start_with_ar = dataset.filter(lambda example: example["sentence1"].startswith("Ar"))
 >>> len(start_with_ar)
 6
->>> start_with_ar['sentence1']
+>>> start_with_ar["sentence1"]
 ['Around 0335 GMT , Tab shares were up 19 cents , or 4.4 % , at A $ 4.56 , having earlier set a record high of A $ 4.57 .',
 'Arison said Mann may have been one of the pioneers of the world music movement and he had a deep love of Brazilian music .',
 'Arts helped coach the youth on an eighth-grade football team at Lombardi Middle School in Green Bay .',
@@ -82,7 +82,7 @@ There are two options for filtering rows in a dataset: [`Dataset.select`] and [`
 ]
 ```
 
-[`Dataset.filter`] can also filter by indices if you set `with_indices=True`:
+[`~Dataset.filter`] can also filter by indices if you set `with_indices=True`:
 
 ```py
 >>> even_dataset = dataset.filter(lambda example, idx: idx % 2 == 0, with_indices=True)
@@ -94,7 +94,7 @@ There are two options for filtering rows in a dataset: [`Dataset.select`] and [`
 
 ### Split
 
-[`Dataset.train_test_split`] creates train and test splits, if your dataset doesn't already have them. This allows you to adjust the relative proportions or absolute number of samples in each split. In the example below, use the `test_size` argument to create a test split that is 10% of the original dataset:
+The [`~Dataset.train_test_split`] function creates train and test splits, if your dataset doesn't already have them. This allows you to adjust the relative proportions or absolute number of samples in each split. In the example below, use the `test_size` parameter to create a test split that is 10% of the original dataset:
 
 ```py
 >>> dataset.train_test_split(test_size=0.1)
@@ -108,13 +108,13 @@ The splits are shuffled by default, but you can set `shuffle=False` to prevent s
 
 ### Shard
 
-🤗 Datasets supports sharding to divide a very large dataset into a predefined number of chunks. Specify the `num_shards` argument in [`Dataset.shard`] to determine the number of shards to split the dataset into. You will also need to provide the shard you want to return with the `index` argument.
+🤗 Datasets supports sharding to divide a very large dataset into a predefined number of chunks. Specify the `num_shards` parameter in [`~Dataset.shard`] to determine the number of shards to split the dataset into. You'll also need to provide the shard you want to return with the `index` parameter.
 
 For example, the [imdb](https://huggingface.co/datasets/imdb) dataset has 25000 examples:
 
 ```py
 >>> from datasets import load_dataset
->>> datasets = load_dataset('imdb', split='train')
+>>> datasets = load_dataset("imdb", split="train")
 >>> print(dataset)
 Dataset({
     features: ['text', 'label'],
@@ -122,7 +122,7 @@ Dataset({
 })
 ```
 
-After you shard the dataset into four chunks, the first shard only has 6250 examples:
+After sharding the dataset into four chunks, the first shard only has 6250 examples:
 
 ```py
 >>> dataset.shard(num_shards=4, index=0)
@@ -136,13 +136,13 @@ Dataset({
 
 ## Rename, remove, cast, and flatten
 
-The following methods allow you to modify the columns of a dataset. These methods are useful for renaming or removing columns, changing columns to a new set of features, and flattening nested column structures.
+The following functions allow you to modify the columns of a dataset. These functions are useful for renaming or removing columns, changing columns to a new set of features, and flattening nested column structures.
 
 ### Rename
 
-Use [`Dataset.rename_column`] when you need to rename a column in your dataset. Features associated with the original column are actually moved under the new column name, instead of just replacing the original column in-place.
+Use [`~Dataset.rename_column`] when you need to rename a column in your dataset. Features associated with the original column are actually moved under the new column name, instead of just replacing the original column in-place.
 
-Provide [`Dataset.rename_column`] with the name of the original column, and the new column name:
+Provide [`~Dataset.rename_column`] with the name of the original column, and the new column name:
 
 ```py
 >>> dataset
@@ -161,7 +161,7 @@ Dataset({
 
 ### Remove
 
-When you need to remove one or more columns, give [`Dataset.remove_columns`] the name of the column to remove. Remove more than one column by providing a list of column names:
+When you need to remove one or more columns, provide the name of the column to remove to the [`~Dataset.remove_columns`] function. Remove more than one column by providing a list of column names:
 
 ```py
 >>> dataset = dataset.remove_columns("label")
@@ -170,7 +170,7 @@ Dataset({
     features: ['sentence1', 'sentence2', 'idx'],
     num_rows: 3668
 })
->>> dataset = dataset.remove_columns(['sentence1', 'sentence2'])
+>>> dataset = dataset.remove_columns(["sentence1", "sentence2"])
 >>> dataset
 Dataset({
     features: ['idx'],
@@ -180,7 +180,7 @@ Dataset({
 
 ### Cast
 
-[`Dataset.cast`] changes the feature type of one or more columns. This method takes your new `Features` as its argument. The following sample code shows how to change the feature types of `ClassLabel` and `Value`:
+The [`~Dataset.cast`] function transforms the feature type of one or more columns. This function accepts your new [`Features`] as its argument. The example below demonstrates how to change the [`ClassLabel`] and [`Value`] features:
 
 ```py
 >>> dataset.features
@@ -191,8 +191,8 @@ Dataset({
 
 >>> from datasets import ClassLabel, Value
 >>> new_features = dataset.features.copy()
->>> new_features["label"] = ClassLabel(names=['negative', 'positive'])
->>> new_features["idx"] = Value('int64')
+>>> new_features["label"] = ClassLabel(names=["negative", "positive"])
+>>> new_features["idx"] = Value("int64")
 >>> dataset = dataset.cast(new_features)
 >>> dataset.features
 {'sentence1': Value(dtype='string', id=None),
@@ -203,11 +203,11 @@ Dataset({
 
 <Tip>
 
-Casting only works if the original feature type and new feature type are compatible. For example, you can cast a column with the feature type `Value('int32')` to `Value('bool')` if the original column only contains ones and zeros.
+Casting only works if the original feature type and new feature type are compatible. For example, you can cast a column with the feature type `Value("int32")` to `Value("bool")` if the original column only contains ones and zeros.
 
 </Tip>
 
-Use [`Dataset.cast_column`] to change the feature type of just one column. Pass the column name and its new feature type as arguments:
+Use the [`~Dataset.cast_column`] function to change the feature type of a single column. Pass the column name and its new feature type as arguments:
 
 ```py
 >>> dataset.features
@@ -220,11 +220,11 @@ Use [`Dataset.cast_column`] to change the feature type of just one column. Pass 
 
 ### Flatten
 
-Sometimes a column can be a nested structure of several types. Use [`Dataset.flatten`] to extract the subfields into their own separate columns. Take a look at the nested structure below from the SQuAD dataset:
+Sometimes a column can be a nested structure of several types. Use the [`~Dataset.flatten`] function to extract the subfields into their own separate columns. Take a look at the nested structure below from the SQuAD dataset:
 
 ```py
 >>> from datasets import load_dataset
->>> dataset = load_dataset('squad', split='train')
+>>> dataset = load_dataset("squad", split="train")
 >>> dataset.features
 {'answers': Sequence(feature={'text': Value(dtype='string', id=None), 'answer_start': Value(dtype='int32', id=None)}, length=-1, id=None),
 'context': Value(dtype='string', id=None),
@@ -233,7 +233,7 @@ Sometimes a column can be a nested structure of several types. Use [`Dataset.fla
 'title': Value(dtype='string', id=None)}
 ```
 
-The `answers` field contains two subfields: `text` and `answer_start`. Flatten them with [`Dataset.flatten`]:
+The `answers` field contains two subfields: `text` and `answer_start`. Flatten them with the [`~Dataset.flatten`] function:
 
 ```py
 >>> flat_dataset = dataset.flatten()
@@ -246,48 +246,25 @@ Dataset({
 
 Notice how the subfields are now their own independent columns: `answers.text` and `answers.answer_start`.
 
-## Align
-
-The [`Dataset.align_labels_with_mapping`] function aligns a dataset label id with the label name. Not all 🤗 Transformers models follow the prescribed label mapping of the original dataset, especially for NLI dataset labels. For example, the [MNLI](https://huggingface.co/datasets/glue) dataset uses the following label mapping:
-
-```py
->>> label2id = {'entailment': 0, 'neutral': 1, 'contradiction': 2}
-```
-
-To align the dataset label mapping with the mapping used by a model, create a dictionary of the label name and id to align on:
-
-```py
->>> label2id = {"contradiction": 0, "neutral": 1, "entailment": 2}
-```
-
-Pass the dictionary of the label mappings to the [`Dataset.align_labels_with_mapping`] function, and the column to align on:
-
-```py
->>> from datasets import load_dataset
-
->>> mnli = load_dataset("glue", "mnli", split="train")
->>> mnli_aligned = mnli.align_labels_with_mapping(label2id, "label")
-```
-
-You can also use this function to assign a custom mapping of labels to ids.
-
 ## Map
 
-Some of the more powerful applications of 🤗 Datasets come from using [`Dataset.map`]. The primary purpose of [`Dataset.map`] is to speed up processing functions. It allows you to apply a processing function to each example in a dataset, independently or in batches. This function can even create new rows and columns.
+Some of the more powerful applications of 🤗 Datasets come from using the [`~Dataset.map`] function. The primary purpose of [`~Dataset.map`] is to speed up processing functions. It allows you to apply a processing function to each example in a dataset, independently or in batches. This function can even create new rows and columns.
 
-In the following example, you will prefix each `sentence1` value in the dataset with `'My sentence: '`. First, create a function that adds `'My sentence: '` to the beginning of each sentence. The function needs to accept and output a `dict`:
+In the following example, prefix each `sentence1` value in the dataset with `'My sentence: '`. 
+
+Start by creating a function that adds `'My sentence: '` to the beginning of each sentence. The function needs to accept and output a `dict`:
 
 ```py
 >>> def add_prefix(example):
-...     example['sentence1'] = 'My sentence: ' + example['sentence1']
+...     example["sentence1"] = 'My sentence: '' + example["sentence1"]
 ...     return example
 ```
 
-Next, apply this function to the dataset with [`Dataset.map`]:
+Now use [`~Dataset.map`] to apply the `add_prefix` function to the entire dataset:
 
 ```py
 >>> updated_dataset = small_dataset.map(add_prefix)
->>> updated_dataset['sentence1'][:5]
+>>> updated_dataset["sentence1"][:5]
 ['My sentence: Amrozi accused his brother , whom he called " the witness " , of deliberately distorting his evidence .',
 "My sentence: Yucaipa owned Dominick 's before selling the chain to Safeway in 1998 for $ 2.5 billion .",
 'My sentence: They had published an advertisement on the Internet on June 10 , offering the cargo for sale , he added .',
@@ -295,27 +272,27 @@ Next, apply this function to the dataset with [`Dataset.map`]:
 ]
 ```
 
-Let's take a look at another example, except this time, you will remove a column with [`Dataset.map`]. When you remove a column, it is only removed after the example has been provided to the mapped function. This allows the mapped function to use the content of the columns before they are removed.
+Let's take a look at another example, except this time, you'll remove a column with [`~Dataset.map`]. When you remove a column, it is only removed after the example has been provided to the mapped function. This allows the mapped function to use the content of the columns before they are removed.
 
-Specify the column to remove with the `remove_columns` argument in [`Dataset.map`]:
+Specify the column to remove with the `remove_columns` parameter in [`~Dataset.map`]:
 
 ```py
->>> updated_dataset = dataset.map(lambda example: {'new_sentence': example['sentence1']}, remove_columns=['sentence1'])
+>>> updated_dataset = dataset.map(lambda example: {"new_sentence": example["sentence1"]}, remove_columns=["sentence1"])
 >>> updated_dataset.column_names
 ['sentence2', 'label', 'idx', 'new_sentence']
 ```
 
 <Tip>
 
-🤗 Datasets also has a [`Dataset.remove_columns`] method that is functionally identical, but faster, because it doesn't copy the data of the remaining columns.
+🤗 Datasets also has a [`~Dataset.remove_columns`] function which is faster because it doesn't copy the data of the remaining columns.
 
 </Tip>
 
-You can also use [`Dataset.map`] with indices if you set `with_indices=True`. The example below adds the index to the beginning of each sentence:
+You can also use [`~Dataset.map`] with indices if you set `with_indices=True`. The example below adds the index to the beginning of each sentence:
 
 ```py
->>> updated_dataset = dataset.map(lambda example, idx: {'sentence2': f'{idx}: ' + example['sentence2']}, with_indices=True)
->>> updated_dataset['sentence2'][:5]
+>>> updated_dataset = dataset.map(lambda example, idx: {"sentence2": f"{idx}: " + example["sentence2"]}, with_indices=True)
+>>> updated_dataset["sentence2"][:5]
 ['0: Referring to him as only " the witness " , Amrozi accused his brother of deliberately distorting his evidence .',
  "1: Yucaipa bought Dominick 's in 1995 for $ 693 million and sold it to Safeway for $ 1.8 billion in 1998 .",
  "2: On June 10 , the ship 's owners had published an advertisement on the Internet , offering the explosives for sale .",
@@ -324,8 +301,7 @@ You can also use [`Dataset.map`] with indices if you set `with_indices=True`. Th
 ]
 ```
 
-You can also use [`Dataset.map`] with the rank of the process if you set `with_rank=True`. This is analogous to `with_indices`. The `rank` argument in the mapped function goes after the `index` one if it is already present. The main use-case for it is to parallelize your computation across several GPUs. This requires setting `multiprocess.set_start_method("spawn")`, without which you will receive a CUDA error: `RuntimeError: Cannot re-initialize CUDA in forked subprocess. To use CUDA with multiprocessing, you must use the 'spawn' start method`.
-
+The [`~Dataset.map`] also works with the rank of the process if you set `with_rank=True`. This is analogous to the `with_indices` parameter. The `with_rank` parameter in the mapped function goes after the `index` one if it is already present. 
 
 ```py
 >>> from multiprocess import set_start_method
@@ -342,65 +318,41 @@ You can also use [`Dataset.map`] with the rank of the process if you set `with_r
 >>> updated_dataset = dataset.map(gpu_computation, with_rank=True)
 ```
 
+The main use-case for rank is to parallelize computation across several GPUs. This requires setting `multiprocess.set_start_method("spawn")`. If you don't you'll receive the following CUDA error: 
+
+```bash
+RuntimeError: Cannot re-initialize CUDA in forked subprocess. To use CUDA with multiprocessing, you must use the 'spawn' start method.
+```
+
 ### Multiprocessing
 
-Multiprocessing can significantly speed up processing by parallelizing the processes on your CPU. Set the `num_proc` argument in [`Dataset.map`] to set the number of processes to use:
+Multiprocessing significantly speeds up processing by parallelizing processes on the CPU. Set the `num_proc` parameter in [`~Dataset.map`] to set the number of processes to use:
 
 ```py
->>> updated_dataset = dataset.map(lambda example, idx: {'sentence2': f'{idx}: ' + example['sentence2']}, num_proc=4)
+>>> updated_dataset = dataset.map(lambda example, idx: {"sentence2": f"{idx}: " + example["sentence2"]}, num_proc=4)
 ```
 
 ### Batch processing
 
-[`Dataset.map`] also supports working with batches of examples. Operate on batches by setting `batched=True`. The default batch size is 1000, but you can adjust it with the `batch_size` argument. This opens the door to many interesting applications such as tokenization, splitting long sentences into shorter chunks, and data augmentation.
-
-#### Tokenization
-
-One of the most obvious use-cases for batch processing is tokenization, which accepts batches of inputs.
-
-First, load the tokenizer from the BERT model:
-
-```py
->>> from transformers import BertTokenizerFast
->>> tokenizer = BertTokenizerFast.from_pretrained('bert-base-cased')
-```
-
-Apply the tokenizer to batches of the `sentence1` field:
-
-```py
->>> encoded_dataset = dataset.map(lambda examples: tokenizer(examples['sentence1']), batched=True)
->>> encoded_dataset.column_names
-['sentence1', 'sentence2', 'label', 'idx', 'input_ids', 'token_type_ids', 'attention_mask']
->>> encoded_dataset[0]
-{'sentence1': 'Amrozi accused his brother , whom he called " the witness " , of deliberately distorting his evidence .',
-'sentence2': 'Referring to him as only " the witness " , Amrozi accused his brother of deliberately distorting his evidence .',
-'label': 1,
-'idx': 0,
-'input_ids': [  101,  7277,  2180,  5303,  4806,  1117,  1711,   117,  2292, 1119,  1270,   107,  1103,  7737,   107,   117,  1104,  9938, 4267, 12223, 21811,  1117,  2554,   119,   102],
-'token_type_ids': [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],
-'attention_mask': [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
-}
-```
-
-Now you have three new columns, `input_ids`, `token_type_ids`, `attention_mask`, that contain the encoded version of the `sentence1` field.
+The [`~Dataset.map`] function also supports working with batches of examples. Operate on batches by setting `batched=True`. The default batch size is 1000, but you can adjust it with the `batch_size` parameter. Batch processing enables interesting applications such as splitting long sentences into shorter chunks and data augmentation.
 
 #### Split long examples
 
-When your examples are too long, you may want to split them into several smaller snippets. Begin by creating a function that:
+When examples are too long, you may want to split them into several smaller chunks. Begin by creating a function that:
 
-1. Splits the `sentence1` field into snippets of 50 characters.
+1. Splits the `sentence1` field into chunks of 50 characters.
 
-2. Stacks all the snippets together to create the new dataset.
+2. Stacks all the chunks together to create the new dataset.
 
 ```py
 >>> def chunk_examples(examples):
 ...     chunks = []
-...     for sentence in examples['sentence1']:
+...     for sentence in examples["sentence1"]:
 ...         chunks += [sentence[i:i + 50] for i in range(0, len(sentence), 50)]
-...     return {'chunks': chunks}
+...     return {"chunks": chunks}
 ```
 
-Apply the function with [`Dataset.map`]:
+Apply the function with [`~Dataset.map`]:
 
 ```py
 >>> chunked_dataset = dataset.map(chunk_examples, batched=True, remove_columns=dataset.column_names)
@@ -431,15 +383,15 @@ Dataset(schema: {'chunks': 'string'}, num_rows: 10470)
 
 #### Data augmentation
 
-With batch processing, you can even augment your dataset with additional examples. In the following example, you will generate additional words for a masked token in a sentence.
+Another application is data augmentation. The following example generates additional words for a masked token in a sentence.
 
-Load the [RoBERTA](https://huggingface.co/roberta-base) model for use in the 🤗 Transformer [FillMaskPipeline](https://huggingface.co/transformers/main_classes/pipelines#transformers.FillMaskPipeline):
+Load and use the [RoBERTA](https://huggingface.co/roberta-base) model in 🤗 Transformer's [FillMaskPipeline](https://huggingface.co/transformers/main_classes/pipelines#transformers.FillMaskPipeline):
 
 ```py
 >>> from random import randint
 >>> from transformers import pipeline
 
->>> fillmask = pipeline('fill-mask', model='roberta-base')
+>>> fillmask = pipeline("fill-mask", model="roberta-base")
 >>> mask_token = fillmask.tokenizer.mask_token
 >>> smaller_dataset = dataset.filter(lambda e, i: i<100, with_indices=True)
 ```
@@ -449,22 +401,22 @@ Create a function to randomly select a word to mask in the sentence. The functio
 ```py
 >>> def augment_data(examples):
 ...     outputs = []
-...     for sentence in examples['sentence1']:
+...     for sentence in examples["sentence1"]:
 ...         words = sentence.split(' ')
 ...         K = randint(1, len(words)-1)
 ...         masked_sentence = " ".join(words[:K]  + [mask_token] + words[K+1:])
 ...         predictions = fillmask(masked_sentence)
-...         augmented_sequences = [predictions[i]['sequence'] for i in range(3)]
+...         augmented_sequences = [predictions[i]["sequence"] for i in range(3)]
 ...         outputs += [sentence] + augmented_sequences
 ...
-...     return {'data': outputs}
+...     return {"data": outputs}
 ```
 
-Use [`Dataset.map`] to apply the function over the whole dataset:
+Use [`~Dataset.map`] to apply the function over the whole dataset:
 
 ```py
 >>> augmented_dataset = smaller_dataset.map(augment_data, batched=True, remove_columns=dataset.column_names, batch_size=8)
->>> augmented_dataset[:9]['data']
+>>> augmented_dataset[:9]["data"]
 ['Amrozi accused his brother , whom he called " the witness " , of deliberately distorting his evidence .',
  'Amrozi accused his brother, whom he called " the witness ", of deliberately withholding his evidence.',
  'Amrozi accused his brother, whom he called " the witness ", of deliberately suppressing his evidence.',
@@ -476,18 +428,18 @@ Use [`Dataset.map`] to apply the function over the whole dataset:
 ]
 ```
 
-For each original sentence, RoBERTA augmented a random word with three alternatives. In the first sentence, the word `distorting` is augmented with `withholding`, `suppressing`, and `destroying`.
+For each original sentence, RoBERTA augmented a random word with three alternatives. In the first sentence, the word `distorting` is supplemented by `withholding`, `suppressing`, and `destroying`.
 
 ### Process multiple splits
 
-Many datasets have splits that you can process simultaneously with [`DatasetDict.map`]. For example, tokenize the `sentence1` field in the train and test split by:
+Many datasets have splits that can be processed simultaneously with [`DatasetDict.map`]. For example, tokenize the `sentence1` field in the train and test split by:
 
 ```py
 >>> from datasets import load_dataset
 
 # load all the splits
 >>> dataset = load_dataset('glue', 'mrpc')
->>> encoded_dataset = dataset.map(lambda examples: tokenizer(examples['sentence1']), batched=True)
+>>> encoded_dataset = dataset.map(lambda examples: tokenizer(examples["sentence1"]), batched=True)
 >>> encoded_dataset["train"][0]
 {'sentence1': 'Amrozi accused his brother , whom he called " the witness " , of deliberately distorting his evidence .',
 'sentence2': 'Referring to him as only " the witness " , Amrozi accused his brother of deliberately distorting his evidence .',
@@ -501,7 +453,7 @@ Many datasets have splits that you can process simultaneously with [`DatasetDict
 
 ### Distributed usage
 
-When you use [`Dataset.map`] in a distributed setting, you should also use [torch.distributed.barrier](https://pytorch.org/docs/stable/distributed?highlight=barrier#torch.distributed.barrier). This ensures the main process performs the mapping, while the other processes load the results, thereby avoiding duplicate work.
+When you use [`~Dataset.map`] in a distributed setting, you should also use [torch.distributed.barrier](https://pytorch.org/docs/stable/distributed?highlight=barrier#torch.distributed.barrier). This ensures the main process performs the mapping, while the other processes load the results, thereby avoiding duplicate work.
 
 The following example shows how you can use `torch.distributed.barrier` to synchronize the processes:
 
@@ -539,11 +491,11 @@ Separate datasets can be concatenated if they share the same column types. Conca
 
 <Tip>
 
-You can also mix several datasets together by taking alternating examples from each one to create a new dataset. This is known as interleaving, and you can use it with [`interleave_datasets`]. Both [`interleave_datasets`] and [`concatenate_datasets`] will work with regular [`Dataset`] and [`IterableDataset`] objects. Refer to the [Stream](./stream#interleave) section for an example of how it's used.
+You can also mix several datasets together by taking alternating examples from each one to create a new dataset. This is known as *interleaving*, which is enabled by the [`interleave_datasets`] function. Both [`interleave_datasets`] and [`concatenate_datasets`] work with regular [`Dataset`] and [`IterableDataset`] objects. Refer to the [Stream](./stream#interleave) guide for an example of how to interleave datasets.
 
 </Tip>
 
-You can also concatenate two datasets horizontally (axis=1) as long as they have the same number of rows:
+You can also concatenate two datasets horizontally by setting `axis=1` as long as the datasets have the same number of rows:
 
 ```py
 >>> from datasets import Dataset
@@ -609,7 +561,7 @@ In this case, the tokenization is applied only when the examples are accessed.
 
 ## Save
 
-Once you are done processing your dataset, you can save and reuse it later with [`Dataset.save_to_disk`].
+Once you are done processing your dataset, you can save and reuse it later with [`~Dataset.save_to_disk`].
 
 Save your dataset by providing the path to the directory you wish to save it to:
 
@@ -617,7 +569,7 @@ Save your dataset by providing the path to the directory you wish to save it to:
 >>> encoded_dataset.save_to_disk("path/of/my/dataset/directory")
 ```
 
-When you want to use your dataset again, use [`load_from_disk`] to reload it:
+Use the [`load_from_disk`] function to reload the dataset:
 
 ```py
 >>> from datasets import load_from_disk
@@ -626,13 +578,13 @@ When you want to use your dataset again, use [`load_from_disk`] to reload it:
 
 <Tip>
 
-Want to save your dataset to a cloud storage provider? Read our [Cloud Storage](./filesystems) guide on how to save your dataset to AWS or Google Cloud Storage!
+Want to save your dataset to a cloud storage provider? Read our [Cloud Storage](./filesystems) guide to learn how to save your dataset to AWS or Google Cloud Storage.
 
 </Tip>
 
 ## Export
 
-🤗 Datasets supports exporting as well, so you can work with your dataset in other applications. The following table shows currently supported file formats you can export to:
+🤗 Datasets supports exporting as well so you can work with your dataset in other applications. The following table shows currently supported file formats you can export to:
 
 | File type               | Export method                                                  |
 |-------------------------|----------------------------------------------------------------|
